fixed gap at top of pages when on mobile

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -116,6 +116,7 @@ ul, ol {
 	h1 {
 		line-height: 1.25;
   		font-weight: 600; 
+  		margin-top: 0;
   	}
 }
 
